# excelsior

./: Cargo.toml  README.md  justfile
.github/workflows/: publish-pypi.yml
python-bindings/: Cargo.toml  README.md  justfile  pyproject.toml
python-bindings/excelsior/: __init__.py  excelsior.pyi
python-bindings/speed_tests/: about-speed-test.md  example_from_readme.py  excelsior_speed_polars.py  openpyxl_speed_polars.py  speed-test-polars-openpyxl-excelsior-0.11.3.md
python-bindings/src/: lib.rs
python-bindings/tests/: conftest.py  helpers_excel.py  mytest.py  test_api_ergonomics.py  test_column_widths.py  test_scanner.py  test_styles_api.py  test_workbook_creation.py
rust-core/: Cargo.toml
rust-core/src/: lib.rs  style.rs  test.rs
rust-core/src/style/: cols.rs
test/: test_rename_worksheets.xlsx
