[package]
name = "rust-core"
version.workspace = true # брать из [workspace.package]
edition.workspace = true # брать из [workspace.package]

[lib]
name = "rust_core"
path = "src/lib.rs"
test = true

[dependencies]
anyhow = "1.0.100"
# mimalloc = "0.1.47"
quick-xml = "0.39.0"
tempfile = "3.23.0"
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }
memchr = { version = "2.7.6", default-features = false }
lexical-core = "1.0.6"
